# bad-tweaks

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
hook-dll/: Cargo.toml
hook-dll/resources/: cosmetics.json
hook-dll/src/: hook.rs  lib.rs  thread_helpers.rs  tweaks.rs  utils.rs
injector/: Cargo.toml  build.rs
injector/src/: args.rs  main.rs
java_stuff/class-version-bumper/: build.gradle.kts  settings.gradle.kts
java_stuff/class-version-bumper/gradle/wrapper/: gradle-wrapper.properties
java_stuff/class-version-bumper/src/main/java/org/cubewhy/classbumper/: ClassVersionBumper.java  Main.java
java_stuff/tweak-entrypoint/: build.gradle.kts  settings.gradle.kts
java_stuff/tweak-entrypoint/gradle/wrapper/: gradle-wrapper.properties
java_stuff/tweak-entrypoint/src/main/java/org/cubewhy/: ClassDumper.java  TweakEntrypoint.java
java_stuff/tweak-entrypoint/src/main/java/org/cubewhy/badtweaks/managers/: TweakManger.java
java_stuff/tweak-entrypoint/src/main/java/org/cubewhy/badtweaks/tweaks/: Tweak.java
java_stuff/tweak-entrypoint/src/main/java/org/cubewhy/badtweaks/tweaks/impl/: CosmeticsTweak.java
