[package]
name = "hook-dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
capstone = "0.13.0"
retour = { version = "0.3", features = ["static-detour"] }
dialog = "0.3.0"
dll-syringe = { version = "0.17.0", features = [
    "rpc-payload",
    "payload-utils",
] }
dll-syringe-macros = "0.1.0"
jni = { version = "0.21.1", features = ["invocation"] }
once_cell = "1.21.3"
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
] }

[build-dependencies]
bindgen = "0.72.0"
